# sdriq-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: lib.rs
test_files/: constant.sdriq  malformed.sdriq  offset_tone.sdriq
