[package]
name = "sdriq"
description = "Reader and writer for SDRAngel I/Q (.sdriq) files"
version = "0.0.1"
license = "GPL-3.0-or-later"
repository = "https://github.com/tatjam/sdriq-rs"
edition = "2024"
readme = "README.md"
keywords = ["sdr", "file-format"]
categories = ["parsing"]

[dependencies]
num-complex = "0.4.6"
thiserror = "2.0.16"
crc32fast = "1.5.0"

[dev-dependencies]
num = "0.4.3" # for testing
